github actions with permission

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,3 +30,4 @@ jobs:
           branch: gh-pages
           folder: dist/recetas/browser
           clean: true
+          token: ${{ secrets.GITHUB_TOKEN }}
